# school-ai-platform

./: .gitignore  LICENSE  README.md  docker-compose.yml  generate_templates.py
apps/api/: .env.example  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  002_grade_announcements.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/common/: errors.py  middleware.py  pagination.py  schemas.py
apps/api/app/core/: audit.py  config.py  llm.py  logging.py  permissions.py  role_permissions.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/modules/accounts/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/app/modules/ai/: models.py  router.py  schemas.py
apps/api/app/modules/announcements/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/apple/assets/: models.py  permissions.py  repository.py  router.py  schemas.py  service.py
apps/api/app/modules/apple/awards/: models.py  permissions.py  repository.py  router.py  (+2 more)
apps/api/app/modules/approvals/: models.py  router.py  schemas.py
apps/api/app/modules/audit/: models.py  router.py  schemas.py
apps/api/app/modules/files/: models.py  router.py  schemas.py
apps/api/app/modules/grade/: __init__.py  models.py  permissions.py  repository.py  router.py  schemas.py  service.py
apps/api/app/modules/ocr/: models.py  router.py  schemas.py
apps/api/app/workers/: celery_app.py  llm_tasks.py  ocr_tasks.py
apps/api/scripts/: seed_roles.py
apps/api/tests/: test_api.py
(+108 files in other folders)
